# agent_viz

./: AGENTS.md  README.md  agent_viz_compare.html  agent_viz_compare_four_live.html  agent_viz_compare_two_live.html  index.html  laminar_trace_39f38cb4.html  laminar_trace_537db26f.html  laminar_trace_67ade002.html  laminar_trace_9c186814.html  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: dashboard_reading_guide.md  dashboard_spec.md  laminar_parser.md  product_thesis.md
examples/: laminar_shared_trace.json  laminar_single_run_dashboard.html  render_example_dashboard.py
src/agent_viz/: __init__.py  comparison.py  dashboard.py  laminar.py  laminar_loader.py  metrics.py  models.py  render_compare.py  render_laminar.py
tests/: test_comparison.py  test_dashboard.py  test_laminar_loader.py  test_laminar_parser.py  test_metrics.py
